<resources>
    <string name="app_name">网易晕乐</string>
    <string name="btn_login">手机号登陆</string>
    <string name="btn_register">注册</string>
    <string name="tv_other_way_to_login">其他登录方式</string>
    <string name="tv_wx">微信</string>
    <string name="tv_qq">QQ</string>
    <string name="tv_wb">微博</string>
    <string name="tv_wy">网易邮箱</string>
    <string name="btn_register_now">注册</string>
    <string name="btn_login_now">登陆</string>
</resources>
