<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_icon"
        app:layout_constraintBottom_toTopOf="@id/btn_login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.7"
        />
    <Button
        android:id="@+id/btn_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/button_style_main"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_other_way_to_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.5"/>
    <Button
        android:id="@+id/btn_register"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:background="@drawable/button_style_main"
        app:layout_constraintTop_toTopOf="@id/btn_login"
        app:layout_constraintBottom_toTopOf="@id/tv_other_way_to_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.25"/>

    <TextView
        android:id="@+id/tv_other_way_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_other_way_to_login"
        android:gravity="center"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/btn_wx"
        app:layout_constraintVertical_bias="0.98"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_wx"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/tv_wx"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="@id/btn_wx"
        app:layout_constraintRight_toRightOf="@id/btn_wx"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/tv_qq"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/tv_qq"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@id/btn_qq"
        app:layout_constraintLeft_toLeftOf="@id/btn_qq"/>
    <TextView
        android:id="@+id/tv_wb"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/tv_wb"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@id/btn_wb"
        app:layout_constraintLeft_toLeftOf="@id/btn_wb"/>
    <TextView
        android:id="@+id/tv_wy"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/tv_wy"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@id/btn_wy"
        app:layout_constraintLeft_toLeftOf="@id/btn_wy"/>
    <Button
        android:id="@+id/btn_wx"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_wx"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_wx"/>
    <Button
        android:id="@+id/btn_qq"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_qq"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_qq"/>
    <Button
        android:id="@+id/btn_wb"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_wb"
        android:layout_toEndOf="@id/btn_qq"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_wb"/>
    <Button
        android:id="@+id/btn_wy"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_wy"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_wy"/>

</android.support.constraint.ConstraintLayout>
